Added register API docs
